<resources>
    <string name="app_name">Projeto Garrav</string>
    <string name="LoginEmail">E-mail</string>
    <string name="LoginPassword">Senha</string>
    <string name="btLogin">Login</string>
    <string name="challenge">Desafios</string>
    <string name="SupportiveFriend">Amigo Solidário</string>
    <string name="title_activity_maps_events">MapsEventsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="MapsEvents">Eventos</string>
    <string name="title_activity_maps">Map</string>
    <string name="SupportEvent">Evento de Apoio</string>
    <string name="SocialEvent">Evento Social</string>
    <string name="btRegisterEvent">Confirmar Evento</string>
    <string name="NameEvent">Nome do Evento</string>
    <string name="DateEvent">Data do Evento</string>
    <string name="ObjetiveEvent">Objetivo do Evento</string>
    <string name="AddressEvent">Endereço do Evento</string>
    <string name="DateTime">Hora do Evento</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="event">Eventos</string>
    <string name="options">Opções</string>
    <string name="report_problem">Reportar Problema</string>
    <string name="about">Sobre</string>
    <string name="logout">Sair</string>
    <string name="title_activity_after_login">AfterLoginActivity</string>
    <string name="emptyPresenceList">Você ainda não confirmou presença em nenhum evento</string>
    <string name="messageTipProblem">Informe aqui se algum problema foi encontrado durante o uso do App para com que isso, possamos consertar o problema e melhorar o App cada vez mais!</string>
    <string name="hintReportProblem">Especifique o Problema Encontrado Aqui</string>
    <string name="sendProblem">Enviar Bug</string>
    <string name="howMuchDistance">Está a: </string>
</resources>
