<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ReportProblemActivity">

    <TextView
        android:id="@+id/tvMessageReportProblem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/messageTipProblem"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/etReportProblemText"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/tvMessageReportProblem"
        android:hint="@string/hintReportProblem"
        android:inputType="textLongMessage"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etReportProblemText"
        android:layout_centerHorizontal="true"
        android:text="@string/sendProblem"
        android:onClick="btSendProblem"/>

</RelativeLayout>