<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <!-- Field Login_E-mail -->
    <EditText
        android:id="@+id/tvLoginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/LoginEmail"/>

    <!-- Field Login_Password -->
    <EditText
        android:id="@+id/tvLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLoginEmail"
        android:inputType="textPassword"
        android:hint="@string/LoginPassword" />

    <!-- Button Login -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLoginPassword"
        android:onClick="btLogin"
        android:hint="@string/btLogin"/>

</RelativeLayout>