<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AfterLoginActivity">

    <!-- Button MapsEvents -->
    <Button
        android:id="@+id/btMapsEvents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btMapsEvents"
        android:hint="@string/MapsEvents"/>

    <!-- Button Challenge -->
    <Button
        android:id="@+id/btChallenge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btMapsEvents"
        android:onClick="btChallenge"
        android:hint="@string/challenge"/>

    <!-- Button SupportiveFriend -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btChallenge"
        android:onClick="btSupportiveFriend"
        android:hint="@string/SupportiveFriend"/>

</RelativeLayout>